@@ -1,3 +1,8 @@
+Thu Nov 11 10:56:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/WaitSet.cpp:
+          Resolved runtime issues in Getter functionality.
+
 Thu Nov 11 10:34:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/Getter_T.cpp:
